fix: remove spurious dqs

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -226,7 +226,7 @@ Fax,فاكس,
 Field,,
 Fieldname,"اسم المجال",
 "File selection failed.","فشل اختيار الملف",
-Filter," التصفية`",
+Filter," التصفية",
 "Fiscal Year",,
 "Fiscal Year End Date","تاريخ نهاية السنة المالية",
 "Fiscal Year Start Date","تاريخ بدء السنة المالية",
@@ -447,7 +447,7 @@ Quantity,الكمية,
 Quarterly,,
 Quarters,,
 Rate,معدل,
-"Rate (${0}) cannot be less zero.","لا يمكن أن يكون `السعر (${0}) أقل من صفر.",
+"Rate (${0}) cannot be less zero.","لا يمكن أن يكون السعر (${0}) أقل من صفر.",
 "Rate (Company Currency)","السعر (عملة الشركة)",
 "Rate can't be negative.","لا يمكن أن يكون المعدل سالبًا",
 Receivable,,
@@ -472,7 +472,7 @@ Reports,التقارير,
 "Required Fields not Assigned","الحقول المطلوبة غير معيَّنة",
 Reset,إعادة,
 "Retained Earnings","الأرباح المحتجزة",
-"Reverse Chrg.","`الشحن العكسي",
+"Reverse Chrg.","الشحن العكسي",
 Reverted,"تم إرجاعه",
 Reverts,,
 "Review Accounts","مراجعة الحسابات",
