--- a/translations/ca-ES.csv
+++ b/translations/ca-ES.csv
@@ -150,7 +150,7 @@ Currency,Divisa,
 "Currency Name","Nom de la divisa",
 Current,Actual,
 "Current Assets","Actius actuals",
-"Current Liabilities","`Obligacions actuals",
+"Current Liabilities","Obligacions actuals",
 "Custom Hex","Hexadecimal personalitzat",
 Customer,Customer,
 "Customer Created","Client creat",
@@ -532,7 +532,7 @@ Setup,Configuració,
 "Setup Complete","Configuració completa",
 "Setup Wizard","Asistent de configuració",
 "Setup Your Workspace","Configura el teu espai de treball",
-"Setup system defaults like date format and display precision","`Configura els valors predeterminats del sistema com la data"," el format i la visualització`"
+"Setup system defaults like date format and display precision","Configura els valors predeterminats del sistema com la data, el format i la visualització"
 "Setup your company information, email, country and fiscal year",,
 "Setup your opening balances before performing any accounting entries","Configureu els saldos d'obertura abans de realitzar qualsevol entrada comptable",
 "Setup your organization","Configura la teva empresa",
